--- a/invite/css/main_mobile.css
+++ b/invite/css/main_mobile.css
@@ -151,325 +151,143 @@ a {
 .height-auto {
   height: auto;
 }
-.main {
-  position: relative;
-  background: url("../img/main_mobile_bg.jpg") no-repeat;
-  width: 10rem;
-  height: 36.36rem;
-  background-size: contain;
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  color: #AEA5E8;
+  font-size: 0.53333333rem;
 }
-.main .content {
-  margin: 0 auto;
-  width: 9.37333333rem;
-  padding-top: 5.61333333rem;
+input:-moz-placeholder,
+textarea:-moz-placeholder {
+  color: #AEA5E8;
+  font-size: 0.53333333rem;
 }
-.main .content .first {
-  color: #fff;
-  overflow: hidden;
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+  color: #AEA5E8;
+  font-size: 0.53333333rem;
 }
-.main .content .first .first-item {
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  color: #AEA5E8;
+  font-size: 0.53333333rem;
+}
+#fullpage #section1 {
+  background: #6356E2;
   width: 100%;
-  float: left;
+  height: 100%;
 }
-.main .content .first .first-item .new-user-text {
-  display: inline-block;
-  margin-top: 0.33333333rem;
-  height: 1.70666667rem;
-}
-.main .content .first .first-item .new-user-text .title-num {
-  background: url("../img/title_num.jpg") no-repeat;
-  float: left;
-  width: 0.74666667rem;
-  height: 0.96rem;
-  background-size: cover;
-  position: relative;
-}
-.main .content .first .first-item .new-user-text .title-num span {
-  font-size: 0.4rem;
-  color: #ca973f;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transform-origin: 50% 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -webkit-transform-origin: 50% 50%;
-  margin-top: -0.13333333rem;
-}
-.main .content .first .first-item .new-user-text .title-content {
-  margin-left: 0.8rem;
-  overflow: hidden;
-}
-.main .content .first .first-item .new-user-text .title-content .red-title {
-  color: #f93a3a;
-  font-size: 0.48rem;
-}
-.main .content .first .first-item .new-user-text .title-content .float-title {
-  float: left;
-  font-size: 0.29333333rem;
-  color: #949494;
-}
-.main .content .first .first-item .new-user-text .title-content .float-title > span {
-  color: #cb7434;
-}
-.main .content .first .first-item .new-user-text .title-content-two {
-  margin-left: 0.93333333rem;
-  margin-left: 0;
-}
-.main .content .first .first-item .new-user-text-no-title {
-  height: 0.34666667rem;
-  margin-bottom: 0.33333333rem;
-}
-.main .content .first .first-item .new-user-text-no-title .title-content {
-  margin-left: 0.66666667rem;
-  overflow: hidden;
-}
-.main .content .first .first-item .new-user-text-no-title .title-content .float-title {
-  z-index: 5 !important;
-  position: relative;
-  font-size: 0.32rem;
-  color: #949494;
-}
-.main .content .first .first-item .new-user-text-no-title .title-content .float-title > span {
-  z-index: 5 !important;
-  color: #cb7434;
-}
-.main .content .first .first-item .new-user-content .row-one {
-  overflow: hidden;
-  text-align: center;
-}
-.main .content .first .first-item .new-user-content .row-one .item {
-  margin-top: 0.24rem;
-}
-.main .content .first .first-item .new-user-content .row-one .item > img {
-  width: 1.57333333rem;
-  height: 1.58666667rem;
-}
-.main .content .first .first-item .new-user-content .row-one .item p {
-  font-size: 0.32rem;
-  color: #949494;
-  text-align: center;
-}
-.main .content .first .first-item .new-user-content .row-one .margin-left {
-  margin-left: 0.13333333rem;
-}
-.main .content .first .first-item .new-user-content .first-content-one {
-  float: left;
-  margin-top: 0.46666667rem;
-  width: 3.89333333rem;
-  height: 5.14666667rem;
-  padding-left: 0.2rem;
-  padding-right: 0.2rem;
-  padding-bottom: 0.2rem;
-  margin-left: 0.33333333rem;
-  background: url("../img/first_content_one_bg_mobile.jpg") no-repeat;
+#fullpage #section1 .banner {
+  background: url("../img/banner.png") no-repeat;
   background-size: 100% 100%;
+  width: 100%;
+  height: 5.06666667rem;
 }
-.main .content .first .first-item .new-user-content .first-content-two {
-  float: left;
-  width: 3.86666667rem;
-  height: 5.62666667rem;
-  margin-left: 0.06666667rem;
-  padding-left: 0.2rem;
-  padding-right: 0.2rem;
-  padding-bottom: 0.2rem;
-  background: url("../img/first_content_two_bg_mobile.png") no-repeat;
-  background-size: 100% 100%;
-}
-.main .content .first .first-item .new-user-content .first-content-two > p {
-  color: #cb7434;
-  font-size: 0.294rem;
-  text-align: center;
-  margin-left: -0.10666667rem;
-  margin-bottom: 0.06666667rem;
-}
-.main .content .first .first-item .new-user-content .first-content-three {
-  width: 3.86666667rem;
-  height: 5.62666667rem;
-  padding-left: 0.2rem;
-  padding-right: 0.2rem;
-  padding-bottom: 0.2rem;
-  margin-left: 0.33333333rem;
-}
-.main .content .first .first-item .new-user-content .first-content-four {
-  width: 4.53333333rem;
-  height: 4.33333333rem;
-  margin-left: 0.06666667rem;
-  background: url("../img/first_content_four_bg.jpg") no-repeat;
-  background-size: cover;
-  float: left;
-  margin-top: 1.33333333rem;
-  padding-top: 0.13333333rem;
-  position: relative;
-}
-.main .content .first .first-item .new-user-content .first-content-four > img {
-  position: absolute;
-  left: 30%;
-  top: -2rem;
-  width: 2.93333333rem;
-  height: 2.01333333rem;
-}
-.main .content .first .first-item .new-user-content .first-content-four .pick-right-now {
-  z-index: 2;
-  text-align: center;
-  background: url("../img/pick_right_now.jpg") no-repeat;
-  width: 4.4rem;
-  height: 1.68rem;
-  background-size: 100% 100%;
-  margin: 0 auto;
-  font-size: 0.48rem;
-  color: #ffc657;
-  line-height: 1.68rem;
-  cursor: pointer;
-}
-.main .content .first .first-item .new-user-content .first-content-four .phone-num {
-  background-color: #360d0d;
-  border: 1px solid #441616;
-  width: 4.4rem;
-  height: 0.89333333rem;
-  line-height: 0.89333333rem;
-  margin: 0 auto;
+#fullpage #section1 .fuli-one {
   margin-top: 0.13333333rem;
-  font-size: 0.32rem;
 }
-.main .content .first .first-item .new-user-content .first-content-four .phone-num span {
-  color: #cb7434;
-  margin-left: 0.06666667rem;
-}
-.main .content .first .first-item .new-user-content .first-content-four .phone-num > input {
-  display: inline-block;
-  width: 2.13333333rem;
-  color: #999;
-  background-color: #360d0d;
-  border: none;
-}
-.main .content .first .first-item .new-user-content .first-content-four .validate-code {
-  background-color: #360d0d;
-  border: 1px solid #441616;
-  width: 4.4rem;
-  height: 0.89333333rem;
-  line-height: 0.89333333rem;
+#fullpage #section1 .fuli-one .fuli-one-top {
+  background: url("../img/fuli_01.png") no-repeat;
+  background-size: 100% 100%;
+  width: 8.77333333rem;
+  height: 7.33333333rem;
   margin: 0 auto;
-  margin-top: 0.06666667rem;
-}
-.main .content .first .first-item .new-user-content .first-content-four .validate-code span {
-  color: #cb7434;
-  font-size: 0.32rem;
-  margin-left: 0.06666667rem;
-}
-.main .content .first .first-item .new-user-content .first-content-four .validate-code > input {
-  display: inline-block;
-  width: 0.8rem;
-  color: #999;
-  font-size: 0.32rem;
-  background-color: #360d0d;
-  border: none;
-}
-.main .content .first .first-item .new-user-content .first-content-four .validate-code a {
-  display: inline-block;
-  background-color: #360d0d;
-  width: 1.66666667rem;
-  border: none;
-  border-left: 1px solid #4a1616;
-  font-size: 0.25333333rem;
-  color: #949494;
-  padding-left: 0.13333333rem;
-  cursor: pointer;
-}
-.main .content .second {
-  margin-top: 0.66666667rem;
-}
-.main .content .second .new-user-text {
-  background: url("../img/second_bg.png") no-repeat;
-  height: 1.2rem;
-  overflow: hidden;
-  font-size: 0.32rem;
-}
-.main .content .second .new-user-text .title-num {
-  background: url("../img/title_num.jpg") no-repeat;
-  float: left;
-  width: 0.74666667rem;
-  height: 0.96rem;
-  background-size: cover;
   position: relative;
 }
-.main .content .second .new-user-text .title-num span {
-  font-size: 0.32rem;
-  color: #ca973f;
+#fullpage #section1 .fuli-one .fuli-one-top .input-mobile-container {
+  background: url("../img/input_bg.png") no-repeat;
+  width: 6.66666667rem;
+  height: 1.06666667rem;
+  line-height: 1.06666667rem;
+  bottom: 1.06666667rem;
+  padding-left: 0.26666667rem;
+  font-size: 0.53333333rem;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  transform-origin: 50% 0;
+  -webkit-transform: translate(-50%, 0);
+  -webkit-transform-origin: 50% 0;
+}
+#fullpage #section1 .fuli-one .fuli-one-top .input-mobile-container input {
+  background: #DEDDFD;
+  border: none;
+  color: #AEA5E8;
+  margin-left: 0.66666667rem;
+}
+#fullpage #section1 .fuli-one .fuli-one-top .input-mobile-container img {
   position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transform-origin: 50% 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -webkit-transform-origin: 50% 50%;
-  margin-top: -0.13333333rem;
-}
-.main .content .second .new-user-text .title-content {
-  margin-left: 0.93333333rem;
-  overflow: hidden;
-}
-.main .content .second .new-user-text .title-content .red-title {
-  color: #f93a3a;
-  font-size: 0.48rem;
-}
-.main .content .second .new-user-text .title-content .float-title {
-  float: left;
-  font-size: 0.32rem;
-  color: #949494;
-}
-.main .content .second .new-user-text .title-content .float-title > span {
-  color: #ffc657;
-}
-.main .content .second .second-content {
-  overflow: hidden;
-  padding-left: 0.46666667rem;
-  padding-right: 0.26666667rem;
-}
-.main .content .second .second-content .second-content-item {
-  background: url("../img/second_item_bg.jpg") no-repeat;
-  width: 4.13333333rem;
-  height: 5.45333333rem;
-  margin-top: 0.4rem;
-  background-size: cover;
-  display: inline-block;
-  position: relative;
-  text-align: center;
-}
-.main .content .second .second-content .second-content-item:nth-child(1) {
-  margin-left: 0;
-}
-.main .content .second .second-content .second-content-item:nth-child(3) {
-  display: block;
-  width: 8.10666667rem;
-  height: 5.45333333rem;
-  background: url("../img/second_item_bg_mobile.jpg") no-repeat;
-  background-size: cover;
-}
-.main .content .second .second-content .second-content-item > p {
-  font-size: 0.294rem;
+  transform: translate(0, -50%);
+  transform-origin: 0 50%;
+  -webkit-transform: translate(0, -50%);
+  -webkit-transform-origin: 0 50%;
+  width: 0.61333333rem;
   height: 0.61333333rem;
-  line-height: 0.61333333rem;
-  color: #ffc657;
 }
-.main .content .second .second-content .second-content-item > img {
-  width: 2.94666667rem;
-  height: 2.77333333rem;
+#fullpage #section1 .fuli-one .get-gift {
+  background: url("../img/btn_01.png") no-repeat;
+  background-size: 100% 100%;
+  width: 7.33333333rem;
+  height: 1.33333333rem;
   margin: 0 auto;
-  margin-top: 0.33333333rem;
+  margin-top: 0.66666667rem;
+  cursor: pointer;
 }
-.main .content .second .second-content .second-content-item .item-bottom {
-  display: block;
-  color: #949494;
-  margin-top: 0.46666667rem;
-  font-size: 0.26666667rem;
+#fullpage #section1 .fuli-one .arrow {
+  margin-top: 0.66666667rem;
   text-align: center;
 }
-.main .content .second .second-content:first-child {
-  margin-left: 0;
+#fullpage #section1 .fuli-one .arrow img {
+  width: 0.6rem;
+  height: 0.6rem;
 }
-.main .layer {
-  position: fixed;
+#fullpage #section2 {
+  background: #6356E2;
+  width: 100%;
+  height: 100%;
+  padding-top: 0.13333333rem;
+}
+#fullpage #section2 .fuli-two {
+  background: url("../img/fuli_02.png") no-repeat;
+  background-size: 100% 100%;
+  width: 100%;
+  width: 8.77333333rem;
+  height: 7.33333333rem;
+  margin: 0 auto;
+  position: relative;
+}
+#fullpage #section2 .fuli-two .download {
+  background: url("../img/btn_02.png") no-repeat;
+  background-size: 100% 100%;
+  width: 7.33333333rem;
+  height: 1.33333333rem;
+  margin: 0 auto;
+  margin-top: 0.66666667rem;
+  bottom: 5%;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  transform-origin: 50% 0;
+  -webkit-transform: translate(-50%, 0);
+  -webkit-transform-origin: 50% 0;
+  cursor: pointer;
+}
+#fullpage #section2 .fuli-three {
+  background: url("../img/fuli_03.png") no-repeat;
+  background-size: 100% 100%;
+  width: 8.77333333rem;
+  height: 7.33333333rem;
+  margin: 0 auto;
+  margin-top: 0.4rem;
+}
+#fullpage #section2 .explain {
+  color: #fff;
+  font-size: 0.34666667rem;
+  margin-top: 0.13333333rem;
+  text-align: center;
+}
+#fullpage .layer {
+  position: absolute;
   transition: .5s;
   width: 100%;
   height: 100%;
@@ -481,7 +299,7 @@ a {
   top: 0;
   z-index: 10;
 }
-.main .dialog {
+#fullpage .dialog {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -496,17 +314,17 @@ a {
   color: #ffc657;
   text-align: center;
 }
-.main .dialog .dialog-title {
+#fullpage .dialog .dialog-title {
   font-size: 0.26666667rem;
   margin-top: 0.84rem;
   background: url("../img/dialog_title_bg.png") no-repeat;
   background-size: 100% 100%;
 }
-.main .dialog .dialog-content {
+#fullpage .dialog .dialog-content {
   font-size: 0.24rem;
   margin-top: 0.93333333rem;
 }
-.main .dialog .dialog-download {
+#fullpage .dialog .dialog-download {
   width: 1.18666667rem;
   height: 0.49333333rem;
   line-height: 0.49333333rem;
@@ -525,7 +343,7 @@ a {
   font-size: 0.24rem;
   text-decoration: none;
 }
-.main .layer-white {
+#fullpage .layer-white {
   position: fixed;
   transition: .5s;
   width: 100%;
@@ -537,7 +355,8 @@ a {
   bottom: 0;
   top: 0;
   z-index: 9;
+  display: none;
 }
-.main .hide {
+#fullpage .hide {
   display: none;
 }
