--- a/invite/css/main_mobile.less
+++ b/invite/css/main_mobile.less
@@ -4,7 +4,6 @@
     @{name}: @px/@font-size-base*1rem;
 }
 
-
 // 边框
 .lessBorder(@px,@color) {
   border: @px * 1px @color solid;
@@ -34,12 +33,11 @@
     @{name}: @param1/@font-size-base*1rem;
 }
 
-
-
 html {
   color: #000;
   background: #FFF;
 }
+
 /*
 	TODO remove settings on BODY since we can't namespace it.
 */
@@ -209,387 +207,174 @@ a {
   color: #000;
   text-decoration: none;
 }
-@fontColorLightYellow:#ffc657;
+
+@fontColorLightYellow: #ffc657;
 @fontColorYellow: #ca973f;
 @fontColorRed: #f93a3a;
 @fontColorGray: #949494;
 @fontColorDarkGray: #999;
 @fontColorDarkYellow: #cb7434;
-.right{
+.right {
   float: right;
 }
-.left{
+
+.left {
   float: left;
 }
-.height-auto{
-  height:auto;
+
+.height-auto {
+  height: auto;
 }
-.main{
-  position: relative;
-  background :url("../img/main_mobile_bg.jpg") no-repeat;
-  .lessRem(width,750);
-  .lessRem(height,2727);
-  //width:100%;
-  //;
-  //.lessRem(height,1648);
- //background-size: 100% 100%;
-background-size: contain;
-  //>img{
-  //  width:100%;
-  //  height:100%;
-  //
-  //
-  //}
-  .content{
-    margin:0 auto;
-    .lessRem(width,703);
-    .lessRem(padding-top,421);
-    .first{
-      color:#fff;
-      overflow: hidden;
 
-      .first-item{
-        width:100%;
-        float: left;
-        .new-user-text{
-          display: inline-block;
-          .lessRem(margin-top,25);
-          .lessRem(height,128);
-          .title-num{
-            background: url("../img/title_num.jpg") no-repeat;
-            float: left;
-            .lessRem(width,56);
-            .lessRem(height,72);
-            background-size: cover;
-            position: relative;
-            span{
-              .lessRem(font-size,30);
-              color:@fontColorYellow;
-              .lessTransformCenter;
-              .lessRem(margin-top,-10);
-            }
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  color: #AEA5E8;
+  .lessRem(font-size, 40);
 
-          }
-          .title-content{
-            .lessRem(margin-left,60);
-            overflow: hidden;
-            .red-title{
-              color:@fontColorRed;
-              .lessRem(font-size,36);
-            }
-            .float-title{
-              float: left;
+}
+
+input:-moz-placeholder, textarea:-moz-placeholder {
+  color: #AEA5E8;
+  .lessRem(font-size, 40);
+
+}
+
+input::-moz-placeholder, textarea::-moz-placeholder {
+  color: #AEA5E8;
+  .lessRem(font-size, 40);
+
+}
+
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  color: #AEA5E8;
+  .lessRem(font-size, 40);
+}
+
+#fullpage {
+
+  #section1 {
+    background: #6356E2;
+
+    width: 100%;
+    height: 100%;
+    .banner {
+      background: url("../img/banner.png") no-repeat;
+      background-size: 100% 100%;
+      width: 100%;
+      .lessRem(height, 380);
+    }
+    .fuli-one {
+      .lessRem(margin-top, 10);
+      .fuli-one-top {
+        background: url("../img/fuli_01.png") no-repeat;
+        background-size: 100% 100%;
+        .lessRem(width, 658);
+
+        .lessRem(height, 550);
+        margin: 0 auto;
 
 
-              .lessRem(font-size,22);
-              color:@fontColorGray;
+        position: relative;
+        .input-mobile-container {
+          background: url("../img/input_bg.png") no-repeat;
+          .lessRem(width, 500);
+          .lessRem(height, 80);
+          .lessRem(line-height, 80);
+          .lessRem(bottom, 80);
 
-              >span{
-                color:@fontColorDarkYellow;
-              }
-            }
-          }
-          .title-content-two{
-            .lessRem(margin-left,70);
-            margin-left: 0;
-          }
-        }
-        .new-user-text-no-title{
-          .lessRem(height,26);
-          .lessRem(margin-bottom,25);
-          .title-content {
+          .lessRem(padding-left, 20);
+          .lessRem(font-size, 40);
+          .lessTransformCenterHorizontal;
+          input {
+            background: #DEDDFD;
+            border: none;
+            color: #AEA5E8;
             .lessRem(margin-left, 50);
-            overflow: hidden;
-            .float-title {
-              z-index: 5 !important;
-              position: relative;
-
-              .lessRem(font-size, 24);
-              color: @fontColorGray;
-              > span {
-                z-index: 5 !important;
-                color: @fontColorDarkYellow;
-              }
-            }
           }
+          img {
+            .lessTransformCenterVertical;
+            .lessRem(width, 46);
+            .lessRem(height, 46);
+          }
+
         }
-        .new-user-content {
-          .row-one {
-            overflow: hidden;
-            text-align: center;
-            .item {
-              .lessRem(margin-top, 18);
-              > img {
-                .lessRem(width, 118);
-                .lessRem(height, 119);
-              }
-              p {
-                .lessRem(font-size, 24);
-                color: @fontColorGray;
-                text-align: center;
-              }
-            }
-            .margin-left{
-              .lessRem(margin-left,10);
-            }
-          }
 
-          .first-content-one {
-            float: left;
-            .lessRem(margin-top, 35);
+      }
+      .get-gift {
+        background: url("../img/btn_01.png") no-repeat;
+        background-size: 100% 100%;
+        .lessRem(width, 550);
+        .lessRem(height, 100);
+        margin: 0 auto;
+        .lessRem(margin-top, 50);
+        cursor:pointer;
 
-            .lessRem(width, 292);
-            .lessRem(height, 386);
-            .lessRem(padding-left,15);
-            .lessRem(padding-right,15);
-            .lessRem(padding-bottom,15);
-            .lessRem(margin-left,25);
-            background: url("../img/first_content_one_bg_mobile.jpg") no-repeat;
-            background-size: 100% 100%;
-          }
-          .first-content-two {
-            float: left;
-            .lessRem(width, 290);
-            .lessRem(height, 422);
-            .lessRem(margin-left,5);
-            .lessRem(padding-left,15);
-            .lessRem(padding-right,15);
-            .lessRem(padding-bottom,15);
-            background: url("../img/first_content_two_bg_mobile.png") no-repeat;
-            background-size: 100% 100%;
+      }
+      .arrow {
+        .lessRem(margin-top, 50);
+        text-align: center;
 
-            >p{
-              color:@fontColorDarkYellow;
-              .lessRem(font-size,22.05);
-              text-align: center;
-              .lessRem(margin-left,-8);
-              .lessRem(margin-bottom,5);
-            }
-          }
-          .first-content-three{
-            .lessRem(width, 290);
-            .lessRem(height, 422);
-            .lessRem(padding-left,15);
-            .lessRem(padding-right,15);
-            .lessRem(padding-bottom,15);
-            .lessRem(margin-left,25);
-          }
-          .first-content-four{
-            .lessRem(width,340);
-            .lessRem(height,325);
-
-            .lessRem(margin-left,5);
-            background: url("../img/first_content_four_bg.jpg") no-repeat;
-            background-size: cover;
-            float: left;
-            .lessRem(margin-top,100);
-            .lessRem(padding-top,10);
-            position: relative;
-            >img{
-              position: absolute;
-              left:30%;
-              .lessRem(top,-150);
-              .lessRem(width,220);
-              .lessRem(height,151);
-
-            }
-            .pick-right-now{
-              z-index: 2;
-              text-align: center;
-
-              background: url("../img/pick_right_now.jpg") no-repeat;
-              .lessRem(width,330);
-
-              .lessRem(height,126);
-              background-size: 100% 100%;
-              margin:0 auto;
-              .lessRem(font-size,36);
-              color:@fontColorLightYellow;
-              .lessRem(line-height,126);
-              cursor: pointer;
-            }
-            .phone-num{
-
-              background-color: #360d0d;
-              border: 1px solid #441616;
-              .lessRem(width,330);
-
-              .lessRem(height,67);
-              .lessRem(line-height,67);
-              margin:0 auto;
-              .lessRem(margin-top,10);
-              .lessRem(font-size,24);
-
-              span{
-                color: @fontColorDarkYellow;
-                .lessRem(margin-left,5);;
-              }
-              >input{
-                display: inline-block;
-                .lessRem(width,160);
-                color:@fontColorDarkGray;
-                background-color: #360d0d;
-                border:none;
-              }
-            }
-            .validate-code{
-              background-color: #360d0d;
-              border: 1px solid #441616;
-
-              .lessRem(width,330);
-              .lessRem(height,67);
-              .lessRem(line-height,67);
-              margin:0 auto;
-              .lessRem(margin-top,5);
-              span{
-                color: @fontColorDarkYellow;
-                .lessRem(font-size,24);
-
-                .lessRem(margin-left,5);;
-              }
-              >input{
-                display: inline-block;
-                .lessRem(width,60);
-                color:@fontColorDarkGray;
-                .lessRem(font-size,24);
-                background-color: #360d0d;
-                border:none;
-              }
-
-              a{
-
-                display: inline-block;
-                background-color:#360d0d;
-                .lessRem(width,125);
-                border:none;
-                border-left: 1px solid #4a1616;
-                .lessRem(font-size,19);
-                color:@fontColorGray;
-                .lessRem(padding-left,10);
-                cursor: pointer;
-              }
-
-            }
-          }
+        img {
+          .lessRem(width, 45);
+          .lessRem(height, 45);
         }
+      }
+    }
+
+  }
+  #section2 {
+    background: #6356E2;
+
+    width: 100%;
+    height: 100%;
+    .lessRem(padding-top, 10);
+    .fuli-two {
+      background: url("../img/fuli_02.png") no-repeat;
+      background-size: 100% 100%;
+      width: 100%;
+
+
+      .lessRem(width, 658);
+
+      .lessRem(height, 550);
+      margin: 0 auto;
+      position: relative;
+
+      .download {
+        background: url("../img/btn_02.png") no-repeat;
+        background-size: 100% 100%;
+        .lessRem(width, 550);
+        .lessRem(height, 100);
+        margin: 0 auto;
+        .lessRem(margin-top, 50);
+        bottom:5%;
+        .lessTransformCenterHorizontal;
+        cursor:pointer;
+
       }
 
     }
-    .second{
-      .lessRem(margin-top,50);
-      ;
-      .new-user-text{
-        background: url("../img/second_bg.png") no-repeat;
-        .lessRem(height,90);
-        overflow: hidden;
-        .lessRem(font-size,24);
-        .title-num{
-          background: url("../img/title_num.jpg") no-repeat;
-          float: left;
-          .lessRem(width,56);
-          .lessRem(height,72);
-          background-size: cover;
-          position: relative;
-          span{
-            .lessRem(font-size,24);
-            color:@fontColorYellow;
-            .lessTransformCenter;
-            .lessRem(margin-top,-10);
-          }
+    .fuli-three {
+      background: url("../img/fuli_03.png") no-repeat;
+      background-size: 100% 100%;
+      //width:100%;
+      .lessRem(width, 658);
 
-        }
-        .title-content{
-          .lessRem(margin-left,70);
-          overflow: hidden;
+      .lessRem(height, 550);
 
-          .red-title{
-            color:@fontColorRed;
-            .lessRem(font-size,36);
+      margin: 0 auto;
+      .lessRem(margin-top, 30);
 
-          }
-          .float-title{
-            float: left;
-            .lessRem(font-size,24);
-            color:@fontColorGray;
-            //&:before{
-            //  content:"";
-            //  background: url("../img/ic_front_text.png") no-repeat;
-            //  .lessRem(width,16);
-            //  .lessRem(height,16);
-            //  background-size:cover;
-            //  display: inline-block;
-            //  text-indent:10px;
-            //  .lessRem(margin-right,10);
-            //}
-            >span{
-              color:@fontColorLightYellow;
-            }
-          }
-        }
-      }
-      .second-content{
-        overflow: hidden;
-        .lessRem(padding-left,35);
-        .lessRem(padding-right,20);
-        .second-content-item{
-          ;
-          background: url("../img/second_item_bg.jpg") no-repeat;
-          .lessRem(width,310);
-          .lessRem(height,409);
-          .lessRem(margin-top,30);
-          background-size: cover;
-          display: inline-block;
-          position: relative;
-          text-align: center;
+    }
+    .explain {
+      color: #fff;
+      .lessRem(font-size, 26);
+      .lessRem(margin-top, 10);
+      text-align: center;
 
-          &:nth-child(1){
-            margin-left:0;
-          }
-          &:nth-child(3){
-            display: block;
-            .lessRem(width,608);
-            .lessRem(height,409);
-            background: url("../img/second_item_bg_mobile.jpg") no-repeat;
-            background-size: cover;
-
-          }
-          >p{
-            .lessRem(font-size,22.05);
-            .lessRem(height,46);
-            .lessRem(line-height,46);
-            color: @fontColorLightYellow;
-          }
-
-          >img{
-            .lessRem(width,221);
-            .lessRem(height,208);
-            margin:0 auto;
-            .lessRem(margin-top,25);
-          }
-          .item-bottom{
-            display: block;
-            color:@fontColorGray;
-            .lessRem(margin-top,35);
-
-            .lessRem(font-size,20);
-            text-align: center;
-            ;
-          }
-        }
-
-
-        &:first-child{
-          margin-left: 0;
-        }
-
-
-      }
     }
   }
-
-
   .layer {
-    position: fixed;
+    position: absolute;
     transition: .5s;
     width: 100%;
     height: 100%;
@@ -618,19 +403,19 @@ background-size: contain;
     }
     .dialog-content {
       .lessRem(font-size, 18);
-      .lessRem(margin-top,70);
+      .lessRem(margin-top, 70);
     }
     .dialog-download {
-      .lessRem(width,89);
-      .lessRem(height,37);
-      .lessRem(line-height,37);
+      .lessRem(width, 89);
+      .lessRem(height, 37);
+      .lessRem(line-height, 37);
       .lessTransformCenterHorizontal;
-      .lessRem(margin-top,60);
+      .lessRem(margin-top, 60);
       display: block;
       cursor: pointer;
       color: @fontColorLightYellow;
       background: url("../img/download_bg_mobile.jpg") no-repeat;
-      background-size:100% 100%;
+      background-size: 100% 100%;
       .lessRem(font-size, 18);
       text-decoration: none;
     }
@@ -648,10 +433,11 @@ background-size: contain;
     bottom: 0;
     top: 0;
     z-index: 9;
+    display: none;
+
   }
-  .hide{
+  .hide {
     display: none;
   }
-
 }
 
