--- a/invite/css/main_pc.css
+++ b/invite/css/main_pc.css
@@ -2,21 +2,6 @@ html {
   color: #000;
   background: #FFF;
 }
-@media (min-width: 1280px) {
-  html {
-    font-size: 14.6666667px !important;
-  }
-}
-@media (min-width: 1440px) {
-  html {
-    font-size: 16.5px !important;
-  }
-}
-@media (min-width: 1920px) {
-  html {
-    font-size: 22px !important;
-  }
-}
 /*
 	TODO remove settings on BODY since we can't namespace it.
 */
@@ -163,326 +148,151 @@ a {
 .left {
   float: left;
 }
-.main {
-  position: relative;
+.height-auto {
+  height: auto;
+}
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  color: #AEA5E8;
+  font-size: 0.53333333rem;
+}
+input:-moz-placeholder,
+textarea:-moz-placeholder {
+  color: #AEA5E8;
+  font-size: 0.53333333rem;
+}
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+  color: #AEA5E8;
+  font-size: 0.53333333rem;
+}
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  color: #AEA5E8;
+  font-size: 0.53333333rem;
+}
+#fullpage {
+  width: 10rem;
+  margin: 0 auto;
+}
+#fullpage #section1 {
+  background: #6356E2;
   width: 100%;
   height: 100%;
-  background: url("../img/main_bg.jpg") no-repeat;
+}
+#fullpage #section1 .banner {
+  background: url("../img/banner.png") no-repeat;
   background-size: 100% 100%;
-  overflow: hidden;
+  width: 100%;
+  height: 5.06666667rem;
 }
-.main .content {
+#fullpage #section1 .fuli-one {
+  margin-top: 0.13333333rem;
+}
+#fullpage #section1 .fuli-one .fuli-one-top {
+  background: url("../img/fuli_01.png") no-repeat;
+  background-size: 100% 100%;
+  width: 8rem;
+  height: 6.66666667rem;
   margin: 0 auto;
-  width: 44.54545455rem;
-  height: 48.68181818rem;
-  margin-top: 21.18181818rem;
+  position: relative;
 }
-.main .content .first {
+#fullpage #section1 .fuli-one .fuli-one-top .input-mobile-container {
+  background: url("../img/input_bg.png") no-repeat;
+  width: 6rem;
+  height: 1.06666667rem;
+  line-height: 1.06666667rem;
+  bottom: 1.06666667rem;
+  padding-left: 0.26666667rem;
+  font-size: 0.53333333rem;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  transform-origin: 50% 0;
+  -webkit-transform: translate(-50%, 0);
+  -webkit-transform-origin: 50% 0;
+}
+#fullpage #section1 .fuli-one .fuli-one-top .input-mobile-container input {
+  background: #DEDDFD;
+  border: none;
+  color: #AEA5E8;
+  width: 3.33333333rem;
+  margin-left: 0.66666667rem;
+}
+#fullpage #section1 .fuli-one .fuli-one-top .input-mobile-container img {
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  transform-origin: 0 50%;
+  -webkit-transform: translate(0, -50%);
+  -webkit-transform-origin: 0 50%;
+  width: 0.61333333rem;
+  height: 0.61333333rem;
+}
+#fullpage #section1 .fuli-one .get-gift {
+  background: url("../img/btn_01.png") no-repeat;
+  background-size: 100% 100%;
+  width: 7.33333333rem;
+  height: 1.33333333rem;
+  margin: 0 auto;
+  margin-top: 0.4rem;
+  cursor: pointer;
+}
+#fullpage #section1 .fuli-one .arrow {
+  margin-top: 0.4rem;
+  text-align: center;
+}
+#fullpage #section1 .fuli-one .arrow img {
+  width: 0.6rem;
+  height: 0.6rem;
+}
+#fullpage #section2 {
+  background: #6356E2;
+  padding-top: 0.13333333rem;
+  width: 100%;
+  height: 100%;
+}
+#fullpage #section2 .fuli-two {
+  background: url("../img/fuli_02.png") no-repeat;
+  background-size: 100% 100%;
+  width: 100%;
+  width: 8rem;
+  height: 6.66666667rem;
+  margin: 0 auto;
+  position: relative;
+}
+#fullpage #section2 .fuli-two .download {
+  background: url("../img/btn_02.png") no-repeat;
+  background-size: 100% 100%;
+  width: 7.33333333rem;
+  height: 1.33333333rem;
+  margin: 0 auto;
+  margin-top: 0.66666667rem;
+  bottom: 5%;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  transform-origin: 50% 0;
+  -webkit-transform: translate(-50%, 0);
+  -webkit-transform-origin: 50% 0;
+  cursor: pointer;
+}
+#fullpage #section2 .fuli-three {
+  background: url("../img/fuli_03.png") no-repeat;
+  background-size: 100% 100%;
+  width: 8rem;
+  height: 6.66666667rem;
+  margin: 0 auto;
+  margin-top: 0.66666667rem;
+}
+#fullpage #section2 .explain {
   color: #fff;
-  overflow: hidden;
+  font-size: 0.34666667rem;
+  margin-top: 0.13333333rem;
+  text-align: center;
 }
-.main .content .first .first-item {
-  width: 50%;
-  float: left;
-}
-.main .content .first .first-item .new-user-text {
-  display: inline-block;
-  margin-top: 1.13636364rem;
-  height: 4.77272727rem;
-}
-.main .content .first .first-item .new-user-text .title-num {
-  background: url("../img/title_num.jpg") no-repeat;
-  float: left;
-  width: 2.54545455rem;
-  height: 3.27272727rem;
-  background-size: cover;
-  position: relative;
-}
-.main .content .first .first-item .new-user-text .title-num span {
-  font-size: 1.36363636rem;
-  color: #ca973f;
+#fullpage .layer {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transform-origin: 50% 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -webkit-transform-origin: 50% 50%;
-  margin-top: -0.45454545rem;
-}
-.main .content .first .first-item .new-user-text .title-content {
-  margin-left: 2.72727273rem;
-  overflow: hidden;
-}
-.main .content .first .first-item .new-user-text .title-content .red-title {
-  color: #f93a3a;
-  font-size: 1.63636364rem;
-}
-.main .content .first .first-item .new-user-text .title-content .float-title {
-  float: left;
-  font-size: 0.63636364rem;
-  color: #949494;
-}
-.main .content .first .first-item .new-user-text .title-content .float-title:before {
-  content: "";
-  background: url("../img/ic_front_text.png") no-repeat;
-  width: 0.72727273rem;
-  height: 0.72727273rem;
-  background-size: cover;
-  display: inline-block;
-  text-indent: 10px;
-  margin-right: 0.45454545rem;
-}
-.main .content .first .first-item .new-user-text .title-content .float-title > span {
-  color: #cb7434;
-}
-.main .content .first .first-item .new-user-text .title-content-two {
-  margin-top: 2.5rem;
-  margin-left: 0;
-  margin-right: 2.72727273rem;
-}
-.main .content .first .first-item .new-user-content {
-  margin-top: 1.59090909rem;
-}
-.main .content .first .first-item .new-user-content .row-one {
-  overflow: hidden;
-  text-align: center;
-}
-.main .content .first .first-item .new-user-content .row-one .item {
-  margin-top: 0.81818182rem;
-}
-.main .content .first .first-item .new-user-content .row-one .item > img {
-  width: 3.40909091rem;
-  height: 3.45454545rem;
-}
-.main .content .first .first-item .new-user-content .row-one .item p {
-  font-size: 0.54545455rem;
-  color: #949494;
-  text-align: center;
-}
-.main .content .first .first-item .new-user-content .row-one .margin-left {
-  margin-left: 0.45454545rem;
-}
-.main .content .first .first-item .new-user-content .first-content-one {
-  float: left;
-  width: 9.54545455rem;
-  height: 12.27272727rem;
-  padding-left: 0.36363636rem;
-  padding-right: 0.36363636rem;
-  padding-bottom: 0.36363636rem;
-  margin-left: 2.95454545rem;
-  background: url("../img/first_content_one_bg.jpg") no-repeat;
-  background-size: cover;
-}
-.main .content .first .first-item .new-user-content .first-content-two {
-  float: left;
-  width: 7.72727273rem;
-  height: 12.27272727rem;
-  margin-left: 0.22727273rem;
-  padding-left: 0.36363636rem;
-  padding-right: 0.36363636rem;
-  padding-bottom: 0.36363636rem;
-  background: url("../img/first_content_two_bg.jpg") no-repeat;
-  background-size: cover;
-}
-.main .content .first .first-item .new-user-content .first-content-two > p {
-  color: #cb7434;
-  font-size: 0.63636364rem;
-  text-align: center;
-  margin-left: -0.36363636rem;
-}
-.main .content .first .first-item .new-user-content .first-content-three {
-  margin-left: 0rem;
-}
-.main .content .first .first-item .new-user-content .first-content-four {
-  width: 11.81818182rem;
-  height: 10.59090909rem;
-  margin-left: 0.22727273rem;
-  background: url("../img/first_content_four_bg.jpg") no-repeat;
-  background-size: cover;
-  float: left;
-  margin-top: 1.59090909rem;
-  padding-top: 0.45454545rem;
-  position: relative;
-}
-.main .content .first .first-item .new-user-content .first-content-four > img {
-  position: absolute;
-  right: -20px;
-  top: -5.68181818rem;
-  width: 8.27272727rem;
-  height: 5.68181818rem;
-}
-.main .content .first .first-item .new-user-content .first-content-four .pick-right-now {
-  text-align: center;
-  background: url("../img/pick_right_now.jpg") no-repeat;
-  width: 11.13636364rem;
-  height: 4.31818182rem;
-  background-size: 100% 100%;
-  margin: 0 auto;
-  font-size: 1.63636364rem;
-  color: #ffc657;
-  line-height: 4.31818182rem;
-  cursor: pointer;
-}
-.main .content .first .first-item .new-user-content .first-content-four .phone-num {
-  background-color: #360d0d;
-  border: 1px solid #441616;
-  width: 11.13636364rem;
-  height: 2.18181818rem;
-  line-height: 2.18181818rem;
-  margin: 0 auto;
-  margin-top: 0.45454545rem;
-}
-.main .content .first .first-item .new-user-content .first-content-four .phone-num span {
-  color: #cb7434;
-  font-size: 0.63636364rem;
-  width: 3.18181818rem;
-  margin-left: 0.22727273rem;
-  display: inline-block;
-}
-.main .content .first .first-item .new-user-content .first-content-four .phone-num > input {
-  display: inline-block;
-  width: 5.45454545rem;
-  font-size: 0.63636364rem;
-  color: #999;
-  background-color: #360d0d;
-  border: none;
-}
-.main .content .first .first-item .new-user-content .first-content-four .validate-code {
-  background-color: #360d0d;
-  border: 1px solid #441616;
-  width: 11.13636364rem;
-  height: 2.18181818rem;
-  line-height: 2.18181818rem;
-  margin: 0 auto;
-  margin-top: 0.22727273rem;
-}
-.main .content .first .first-item .new-user-content .first-content-four .validate-code span {
-  color: #cb7434;
-  width: 3.18181818rem;
-  display: inline-block;
-  font-size: 0.63636364rem;
-  margin-left: 0.22727273rem;
-}
-.main .content .first .first-item .new-user-content .first-content-four .validate-code > input {
-  display: inline-block;
-  width: 1.81818182rem;
-  font-size: 0.63636364rem;
-  color: #999;
-  background-color: #360d0d;
-  border: none;
-}
-.main .content .first .first-item .new-user-content .first-content-four .validate-code a {
-  display: inline-block;
-  background-color: #360d0d;
-  width: 4.09090909rem;
-  border: none;
-  border-left: 1px solid #4a1616;
-  font-size: 0.63636364rem;
-  padding-left: 0.45454545rem;
-  color: #949494;
-  cursor: pointer;
-}
-.main .content .second {
-  margin-top: 2.27272727rem;
-}
-.main .content .second .new-user-text {
-  background: url("../img/second_bg.png") no-repeat;
-  height: 4.09090909rem;
-  overflow: hidden;
-}
-.main .content .second .new-user-text .title-num {
-  background: url("../img/title_num.jpg") no-repeat;
-  float: left;
-  width: 2.54545455rem;
-  height: 3.27272727rem;
-  background-size: cover;
-  position: relative;
-}
-.main .content .second .new-user-text .title-num span {
-  font-size: 1.36363636rem;
-  color: #ca973f;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transform-origin: 50% 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -webkit-transform-origin: 50% 50%;
-  margin-top: -0.45454545rem;
-}
-.main .content .second .new-user-text .title-content {
-  margin-left: 3.18181818rem;
-  overflow: hidden;
-}
-.main .content .second .new-user-text .title-content .red-title {
-  color: #f93a3a;
-  font-size: 1.63636364rem;
-}
-.main .content .second .new-user-text .title-content .float-title {
-  float: left;
-  margin-left: 5px;
-  font-size: 0.63636364rem;
-  color: #949494;
-}
-.main .content .second .new-user-text .title-content .float-title:before {
-  content: "";
-  background: url("../img/ic_front_text.png") no-repeat;
-  width: 0.72727273rem;
-  height: 0.72727273rem;
-  background-size: cover;
-  display: inline-block;
-  text-indent: 10px;
-  margin-right: 0.45454545rem;
-}
-.main .content .second .new-user-text .title-content .float-title > span {
-  color: #cb7434;
-}
-.main .content .second .second-content {
-  padding-left: 2.95454545rem;
-  padding-right: 2.27272727rem;
-  overflow: hidden;
-}
-.main .content .second .second-content .second-content-item {
-  background: url("../img/second_item_bg.jpg") no-repeat;
-  width: 12.27272727rem;
-  height: 18.59090909rem;
-  background-size: cover;
-  display: inline-block;
-  position: relative;
-  text-align: center;
-  margin-left: 0.68181818rem;
-}
-.main .content .second .second-content .second-content-item:nth-child(1) {
-  margin-left: 0;
-}
-.main .content .second .second-content .second-content-item > p {
-  font-size: 0.81818182rem;
-  height: 2.09090909rem;
-  line-height: 2.09090909rem;
-  color: #cb7434;
-}
-.main .content .second .second-content .second-content-item > img {
-  width: 10.04545455rem;
-  height: 9.45454545rem;
-  margin: 0 auto;
-  margin-top: 1.13636364rem;
-}
-.main .content .second .second-content .second-content-item .item-bottom {
-  display: block;
-  color: #949494;
-  margin-top: 1.59090909rem;
-  font-size: 0.63636364rem;
-  text-align: center;
-}
-.main .content .second .second-content:first-child {
-  margin-left: 0;
-}
-.main .margin-left-clear {
-  margin-left: 0;
-}
-.main .layer {
-  position: fixed;
   transition: .5s;
   width: 100%;
   height: 100%;
@@ -494,7 +304,7 @@ a {
   top: 0;
   z-index: 10;
 }
-.main .dialog {
+#fullpage .dialog {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -502,43 +312,43 @@ a {
   transform-origin: 50% 50%;
   -webkit-transform: translate(-50%, -50%);
   -webkit-transform-origin: 50% 50%;
-  width: 27.54545455rem;
-  height: 24.09090909rem;
-  background: url("../img/dialog_pc.png") no-repeat;
-  background-size: 100% 100%;
+  width: 4.86666667rem;
+  height: 4.28rem;
+  background: url("../img/dialog_mobile.png") no-repeat;
+  background-size: cover;
   color: #ffc657;
   text-align: center;
 }
-.main .dialog .dialog-title {
+#fullpage .dialog .dialog-title {
+  font-size: 0.26666667rem;
+  margin-top: 0.84rem;
   background: url("../img/dialog_title_bg.png") no-repeat;
   background-size: 100% 100%;
-  font-size: 1.63636364rem;
-  margin-top: 4.18181818rem;
 }
-.main .dialog .dialog-content {
-  font-size: 1.27272727rem;
-  margin-top: 4.54545455rem;
+#fullpage .dialog .dialog-content {
+  font-size: 0.24rem;
+  margin-top: 0.93333333rem;
 }
-.main .dialog .dialog-download {
-  width: 8.22727273rem;
-  height: 3.5rem;
-  line-height: 3.5rem;
+#fullpage .dialog .dialog-download {
+  width: 1.18666667rem;
+  height: 0.49333333rem;
+  line-height: 0.49333333rem;
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0);
   transform-origin: 50% 0;
   -webkit-transform: translate(-50%, 0);
   -webkit-transform-origin: 50% 0;
-  margin-top: 4.54545455rem;
+  margin-top: 0.8rem;
   display: block;
   cursor: pointer;
   color: #ffc657;
-  background: url("../img/download_bg_pc.jpg") no-repeat;
+  background: url("../img/download_bg_mobile.jpg") no-repeat;
   background-size: 100% 100%;
-  font-size: 1.63636364rem;
+  font-size: 0.24rem;
   text-decoration: none;
 }
-.main .layer-white {
+#fullpage .layer-white {
   position: fixed;
   transition: .5s;
   width: 100%;
@@ -550,7 +360,8 @@ a {
   bottom: 0;
   top: 0;
   z-index: 9;
+  display: none;
 }
-.main .hide {
+#fullpage .hide {
   display: none;
 }
