--- a/gather/css/main_pc.css
+++ b/gather/css/main_pc.css
@@ -352,15 +352,140 @@ textarea:-ms-input-placeholder {
 .main .swiper-container .swiper-slide .rank .rank-item {
   height: 1.33333333rem;
   line-height: 1.33333333rem;
+  margin-top: 0.26666667rem;
 }
 .main .swiper-container .swiper-slide .rank .rank-item .left {
   font-size: 0.4rem;
   color: #464646;
+  position: relative;
 }
-.main .swiper-container .swiper-slide .rank .rank-item .left img {
-  width: 0.8rem;
-  height: 0.8rem;
-  vertical-align: middle;
+.main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-red {
+  position: relative;
+  width: 1.06666667rem;
+  height: 1.06666667rem;
+  float: left;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  transform-origin: 0 50%;
+  -webkit-transform: translate(0, -50%);
+  -webkit-transform-origin: 0 50%;
+}
+.main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-red img {
+  width: 1.06666667rem;
+  height: 1.06666667rem;
+  border-radius: 0.53333333rem;
+  border: 1px solid #f00;
+}
+.main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-red .small-tag {
+  background: #f00;
+  border-radius: 0.2rem;
+  width: 0.4rem;
+  height: 0.4rem;
+  line-height: 0.4rem;
+  font-size: 0.16rem;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  right: -0.06666667rem;
+}
+.main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-orange {
+  position: relative;
+  width: 1.06666667rem;
+  height: 1.06666667rem;
+  float: left;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  transform-origin: 0 50%;
+  -webkit-transform: translate(0, -50%);
+  -webkit-transform-origin: 0 50%;
+}
+.main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-orange img {
+  width: 1.06666667rem;
+  height: 1.06666667rem;
+  border-radius: 0.53333333rem;
+  border: 1px solid #FA7527;
+}
+.main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-orange .small-tag {
+  background: #FA7527;
+  border-radius: 0.2rem;
+  width: 0.4rem;
+  height: 0.4rem;
+  line-height: 0.4rem;
+  font-size: 0.16rem;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  right: -0.06666667rem;
+}
+.main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-yellow {
+  position: relative;
+  width: 1.06666667rem;
+  height: 1.06666667rem;
+  float: left;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  transform-origin: 0 50%;
+  -webkit-transform: translate(0, -50%);
+  -webkit-transform-origin: 0 50%;
+}
+.main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-yellow img {
+  width: 1.06666667rem;
+  height: 1.06666667rem;
+  border-radius: 0.53333333rem;
+  border: 1px solid #FFC600;
+}
+.main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-yellow .small-tag {
+  background: #FFC600;
+  border-radius: 0.2rem;
+  width: 0.4rem;
+  height: 0.4rem;
+  line-height: 0.4rem;
+  font-size: 0.16rem;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  right: -0.06666667rem;
+}
+.main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-gray {
+  position: relative;
+  width: 1.06666667rem;
+  height: 1.06666667rem;
+  float: left;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  transform-origin: 0 50%;
+  -webkit-transform: translate(0, -50%);
+  -webkit-transform-origin: 0 50%;
+}
+.main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-gray img {
+  width: 1.06666667rem;
+  height: 1.06666667rem;
+  border-radius: 0.53333333rem;
+  border: 1px solid #ccc;
+}
+.main .swiper-container .swiper-slide .rank .rank-item .left .avatar-container-gray .small-tag {
+  background: #ccc;
+  border-radius: 0.2rem;
+  width: 0.4rem;
+  height: 0.4rem;
+  line-height: 0.4rem;
+  font-size: 0.16rem;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  right: -0.06666667rem;
+}
+.main .swiper-container .swiper-slide .rank .rank-item .left .rank-name {
+  float: left;
+  margin-left: 1.6rem;
 }
 .main .swiper-container .swiper-slide .rank .rank-item .right {
   font-size: 0.34666667rem;
