--- a/gather/css/main_mobile.less
+++ b/gather/css/main_mobile.less
@@ -468,7 +468,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
                 border: 1px solid #f00;
               }
               .small-tag{
-                background: #FFC600;
+                background: #f00;
                 .lessRem(border-radius, 15);
                 .lessRem(width, 30);
                 .lessRem(height, 30);
@@ -494,7 +494,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
                 border: 1px solid #FA7527;
               }
               .small-tag{
-                background: #FFC600;
+                background: #FA7527;
                 .lessRem(border-radius, 15);
                 .lessRem(width, 30);
                 .lessRem(height, 30);
