--- a/gather/css/main_mobile.less
+++ b/gather/css/main_mobile.less
@@ -252,6 +252,13 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 .main {
   .lessRem(width, 750);
   margin: 0 auto;
+  .yindao{
+    background: url("../img/yindao.jpg") repeat-x;
+    background-size: 100% 100%;
+
+    width: 100%;
+    .lessRem(height, 206);
+  }
   .banner {
     background: url("../img/banner.png") repeat-x;
     background-size: 100% 100%;
