--- a/gather/css/main_pc.less
+++ b/gather/css/main_pc.less
@@ -252,6 +252,14 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 .main {
   .lessRem(width, 750);
   margin: 0 auto;
+  .yindao{
+    background: url("../img/yindao.jpg") repeat-x;
+    background-size: 100% 100%;
+
+    width: 100%;
+    .lessRem(height, 206);
+    display: none;
+  }
   .banner {
     background: url("../img/banner.png") repeat-x;
     background-size: 100% 100%;
@@ -459,7 +467,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
               position: relative;
               .lessRem(width, 80);
               .lessRem(height, 80);
-              float: left;  
+              float: left;
               .lessTransformCenterVertical;
               img{
                 .lessRem(width, 80);
