--- a/gather/css/main_mobile.css
+++ b/gather/css/main_mobile.css
@@ -175,6 +175,12 @@ textarea:-ms-input-placeholder {
   width: 10rem;
   margin: 0 auto;
 }
+.main .yindao {
+  background: url("../img/yindao.jpg") repeat-x;
+  background-size: 100% 100%;
+  width: 100%;
+  height: 2.74666667rem;
+}
 .main .banner {
   background: url("../img/banner.png") repeat-x;
   background-size: 100% 100%;
